--- a/Ilan.html
+++ b/Ilan.html
@@ -3,18 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/general.css">
-    <script src="js/report.js"></script>
-    <link href="https://www.sahibinden.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet"
-          type="text/css">
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css">
-
-    <title>QA - Test Results Report</title>
+    <link rel="import" href="library.html">
 </head>
 <body>
 
