--- a/Summary.html
+++ b/Summary.html
@@ -42,13 +42,13 @@
     <div class="grid-item" id="passed-test-count"><a></a></div>
     <div class="grid-item" id="failed-test-count"><a></a></div>
     <div class="grid-item" id="disabled-test-count"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
-    <div class="grid-item"><a></a></div>
+    <div class="grid-item" id="bireysel"><a></a></div>
+    <div class="grid-item" id="kurumsal"><a></a></div>
+    <div class="grid-item" id="finans"><a></a></div>
+    <div class="grid-item" id="alisveris"><a></a></div>
+    <div class="grid-item" id="arama"><a></a></div>
+    <div class="grid-item" id="ilan"><a></a></div>
+    <div class="grid-item" id="reklam"><a></a></div>
 
 </div>
 
