header, smooth scroll, non-running-test menu added

--- a/Alisveris.html
+++ b/Alisveris.html
@@ -16,6 +16,7 @@
          width="48" height="48">
     <div class="header-left">
         <a href="Summary.html">Summary</a>
+        <a href="Non-Running-Tests.html">Non-Running Tests</a>
         <a href="Bireysel.html">Bireysel</a>
         <a href="Kurumsal.html">Kurumsal</a>
         <a href="Finans.html">Finans</a>
@@ -26,6 +27,12 @@
     </div>
 </div>
 
+<hr>
+<div class="container">
+    <div class="page-header">
+        <h1>Alışveriş</h1>
+    </div>
+</div>
 <hr>
 
 <div id="test-result-table">
@@ -57,7 +64,6 @@
     </table>
 </div>
 
-<button id="write-test-list" class="button">Write Test List</button>
 <div id="events"></div>
 
 <script type="text/javascript">
