--- a/Non-Running-Tests.html
+++ b/Non-Running-Tests.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/general.css">
+    <link rel="stylesheet" type="text/css" href="css/datatable.css">
+    <link rel="stylesheet" type="text/css" href="css/page-up.css">
     <link rel="import" href="library.html">
     <title>QA - Test Result - Reklam</title>
     <link href="https://www.sahibinden.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -60,9 +62,12 @@
 
 <div id="events"></div>
 
+<a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+
 <script type="text/javascript">
     getNonRunningTests();
     writeTestList();
+    topScroll();
 </script>
 </body>
 </html>
