--- a/Non-Running-Tests.html
+++ b/Non-Running-Tests.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/datatable.css">
     <link rel="stylesheet" type="text/css" href="css/page-up.css">
     <link rel="import" href="library.html">
-    <title>QA - Test Result - Reklam</title>
+    <title>QA - Test Result - Non Running Tests</title>
     <link href="https://www.sahibinden.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
