--- a/Summary.html
+++ b/Summary.html
@@ -71,7 +71,6 @@
             <td id="alisveris-failed"><a></a></td>
             <td id="alisveris-disabled"><a></a></td>
         </tr>
-
         <tr>
             <td><a></a>Arama</td>
             <td id="arama-passed"><a></a></td>
@@ -139,7 +138,7 @@
 <script type="text/javascript">
     getTestResultReport(true);
     writeTestList();
-    setReportInfo();
+    getSummaryReportInfo();
     topScroll();
 </script>
 </body>
