--- a/library.html
+++ b/library.html
@@ -17,4 +17,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 </head>
+<script>
+    topScroll();
+</script>
 </html>
