kure based test result info added

--- a/Non-Running-Tests.html
+++ b/Non-Running-Tests.html
@@ -33,7 +33,7 @@
 
 <div class="container">
     <div class="page-header">
-        <h1>Non-Running Test List</h1>
+        <h1>Non-Running Tests</h1>
     </div>
 </div>
 
